# hl-dl

./: .gitignore  README.md  fetch_leaderboard.py  pyproject.toml  requirements.txt
data/: leaderboard_2025-06-07.csv  leaderboard_2025-06-07.parquet  leaderboard_2025-06-08.parquet  leaderboard_2025-06-08T08:44:16.parquet  leaderboard_2025-06-08T09:16:18.parquet  leaderboard_2025-06-08T10:16:48.parquet  leaderboard_2025-06-08T11:13:16.parquet  leaderboard_2025-06-08T12:32:08.parquet  leaderboard_2025-06-08T13:24:49.parquet  leaderboard_2025-06-08T14:14:28.parquet  leaderboard_2025-06-08T15:17:15.parquet  leaderboard_2025-06-08T16:19:33.parquet  leaderboard_2025-06-08T17:14:01.parquet  leaderboard_2025-06-08T18:21:25.parquet  leaderboard_2025-06-08T19:13:22.parquet  leaderboard_2025-06-08T20:17:43.parquet  leaderboard_2025-06-08T21:14:52.parquet  leaderboard_2025-06-08T22:15:35.parquet  leaderboard_2025-06-08T23:15:49.parquet  leaderboard_2025-06-09T01:26:52.parquet  leaderboard_2025-06-09T03:20:36.parquet  leaderboard_2025-06-09T04:29:14.parquet  leaderboard_2025-06-09T05:18:48.parquet  leaderboard_2025-06-09T06:27:50.parquet  leaderboard_2025-06-09T07:18:21.parquet  leaderboard_2025-06-09T08:25:45.parquet  leaderboard_2025-06-09T09:19:40.parquet  leaderboard_2025-06-09T10:19:45.parquet  leaderboard_2025-06-09T11:15:51.parquet  leaderboard_2025-06-09T12:36:15.parquet  leaderboard_2025-06-09T13:30:23.parquet  leaderboard_2025-06-09T14:18:01.parquet  leaderboard_2025-06-09T15:19:16.parquet  leaderboard_2025-06-09T16:22:36.parquet  leaderboard_2025-06-09T17:15:55.parquet  (+3505 more)
(+2 files in other folders)
