[project]
name = "hl-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=20.0.0",
    "ipykernel>=6.29.5",
    "PyGithub>=2.6.1",
    "duckdb>=1.3.0",
    "polars>=1.30.0",
    "altair>=5.5.0"
]
